# diabayes

./: .gitignore  LICENSE  README.md  community.html  diabayes.html  genindex.html  getting-started.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-docs.yml  python-test.yml
_autosummary/: diabayes.SVI.compute_phi.html  diabayes.forward_models.Forward.html  diabayes.forward_models.ageing_law.html  diabayes.forward_models.aging_law.html  diabayes.forward_models.inertial_springblock.html  diabayes.forward_models.rsf.html  diabayes.forward_models.slip_rate.html  diabayes.forward_models.springblock.html  diabayes.solver.ODESolver.bayesian_inversion.html  diabayes.solver.ODESolver.html  diabayes.solver.ODESolver.max_likelihood_inversion.html  diabayes.solver.ODESolver.solve_forward.html  diabayes.typedefs.BayesianSolution.html  diabayes.typedefs.StateDict.html  diabayes.typedefs.Variables.html
_modules/: index.html
_modules/diabayes/: SVI.html  forward_models.html  solver.html  typedefs.html
_sources/: community.md.txt  diabayes.rst.txt  getting-started.md.txt  index.md.txt  index.rst.txt
_sources/_autosummary/: diabayes.SVI.compute_phi.rst.txt  diabayes.forward_models.Forward.rst.txt  diabayes.forward_models.ageing_law.rst.txt  diabayes.forward_models.aging_law.rst.txt  diabayes.forward_models.inertial_springblock.rst.txt  diabayes.forward_models.rsf.rst.txt  diabayes.forward_models.slip_rate.rst.txt  diabayes.forward_models.springblock.rst.txt  diabayes.solver.ODESolver.bayesian_inversion.rst.txt  diabayes.solver.ODESolver.max_likelihood_inversion.rst.txt  diabayes.solver.ODESolver.rst.txt  diabayes.solver.ODESolver.solve_forward.rst.txt  diabayes.typedefs.BayesianSolution.rst.txt  diabayes.typedefs.StateDict.rst.txt  diabayes.typedefs.Variables.rst.txt
_sources/api/: forward_models.md.txt  index.md.txt  modules.rst.txt  svi.md.txt  typedefs.md.txt
api/: diabayes.html  forward_models.html  index.html  modules.html  solver.html  svi.html  typedefs.html
diabayes/: SVI.py  __init__.py  forward_models.py  inversion.py  solver.py  typedefs.py
docs/source/: community.md  (+5 more)
examples/: google_colab.ipynb  simple_inversion.ipynb
test/: aux.py  test_forward_models.py  test_solvers.py  test_typedefs.py
user-guide/: adding_features.html  advanced_usage.html  friction_experiments.html  index.html
(+31 files in other folders)
